--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ node_modules/
 
 # Ignore application configuration
 /config/application.yml
+.idea/
+.ruby-version
+
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
