--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ node_modules/
 
 # Ignore application configuration
 /config/application.yml
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
