--- a/config/settings.yml
+++ b/config/settings.yml
@@ -10,6 +10,8 @@ user:
 
   password:
     min_length: 8
+  index:
+    per_page: 7
 category:
   name_max: 70
   name_min: 3
@@ -18,4 +20,8 @@ product:
   min_name: 3
   per_page: 7
 promotion:
+  per_page: 7
+order:
+  per_page: 7
+suggestion:
   per_page: 7
